overflow fix

--- a/www/css/admin/style.css
+++ b/www/css/admin/style.css
@@ -53,7 +53,6 @@ body {
 /* odebrani ramecku kolem datagridu */
 .datagrid {
     padding: 0;
-    overflow-x: auto;
 }
 
 div > .datagrid {
@@ -116,7 +115,7 @@ div.mce-fullscreen {
     border-left: none !important;
 }
 
-/*!* vyber role *!*/
+/*/* vyber role */*/
 #role-menu-text {
     max-width: 220px;
     display: inline-block;
